--- a/index.html
+++ b/index.html
@@ -5,69 +5,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restaurant Menu</title>
-    <!-- Load Bootstrap CSS -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Load markdown-it library -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it/13.0.1/markdown-it.min.js" integrity="sha512-SYfDUYPg5xspsG6OOpXU366G8SZsdHOhqk/icdrYJ2E/WKZxPxze7d2HD3AyXpT7U22PZ5y74xRpqZ6A2bJ+kQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <style>
-        .menu-section {
-            margin-bottom: 30px;
-        }
         .menu-description-spanish {
-            font-size: 0.9em;
             color: gray;
+            font-size: 90%;
+        }
+
+        .menu-section {
+            margin-top: 1.5rem;
+            border-bottom: 2px solid black;
+        }
+
+        .menu-item {
+            padding-left: 1.5rem;
+            border-left: 4px solid #007BFF;
         }
     </style>
 </head>
 
 <body>
+    <div class="container mt-5">
+        <div id="menuContent"></div>
+    </div>
 
-<div class="container mt-5">
-    <h1 class="text-center mb-4">Restaurant Menu</h1>
-    <div id="menuContent"></div>
-</div>
+    <!-- Scripts -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it/13.0.1/markdown-it.min.js" integrity="sha512-SYfDUYPg5xspsG6OOpXU366G8SZsdHOhqk/icdrYJ2E/WKZxPxze7d2HD3AyXpT7U22PZ5y74xRpqZ6A2bJ+kQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            fetch('menu.md')
+                .then(response => response.text())
+                .then(text => {
+                    const md = new markdownit();
+                    const result = md.render(text);
+                    document.getElementById('menuContent').innerHTML = result;
+                    styleMenu();
+                });
 
-<!-- Load Bootstrap JS and Popper.js -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+            function styleMenu() {
+                const headers = document.querySelectorAll('#menuContent h1, #menuContent h2, #menuContent h3');
+                headers.forEach(header => {
+                    header.classList.add('display-4', 'menu-section'); // Add Bootstrap class for headers
+                });
 
-<!-- Custom JS to load and process the menu -->
-<script>
-    // Initialize markdown-it
-    const md = window.markdownit();
-
-    fetch('menu.md')
-        .then(response => response.text())
-        .then(data => {
-            // Parse the Markdown content using markdown-it
-            const htmlContent = md.render(data);
-            document.getElementById('menuContent').innerHTML = htmlContent;
-
-            // Add Bootstrap classes for styling
-            styleMenu();
-        })
-        .catch(error => {
-            console.error('Error fetching the menu:', error);
-        });
-
-    function styleMenu() {
-        const headers = document.querySelectorAll('#menuContent h1, #menuContent h2, #menuContent h3');
-        headers.forEach(header => {
-            header.classList.add('display-4', 'menu-section'); // Add Bootstrap class for headers
-        });
-
-        const listItems = document.querySelectorAll('#menuContent li');
-        listItems.forEach(item => {
-            item.classList.add('mb-2', 'menu-item'); // Add margin for each list item
-            // Splitting English and Spanish descriptions
-            const desc = item.lastElementChild.innerText.split('*');
-            if (desc.length > 1) {
-                item.lastElementChild.innerHTML = `<span>${desc[0]}</span><br/><span class="menu-description-spanish">${desc[1]}</span>`;
+                const listItems = document.querySelectorAll('#menuContent li');
+                listItems.forEach(item => {
+                    item.classList.add('mb-3', 'menu-item'); // Add margin for each list item
+                    const paragraphs = item.querySelectorAll('p');
+                    if (paragraphs.length > 1) {
+                        const englishDesc = paragraphs[0].innerHTML;
+                        const spanishDesc = paragraphs[1].innerText.split('*')[1];  // Extract the Spanish description
+                        item.innerHTML = `<p>${englishDesc} <br><span class="menu-description-spanish">${spanishDesc}</span></p>`;
+                    }
+                });
             }
         });
-    }
-</script>
-
+    </script>
 </body>
+
 </html>
