--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                         }]
                     });
                 },
-                addItem(index) {
-                    this.sections[index].items.push({
+                addItem(sectionIndex) {
+                    this.sections[sectionIndex].items.push({
                         name: '',
                         description: '',
                         price: 0
